--- a/tech_test.html
+++ b/tech_test.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>fairvioo review</title>
 		<link rel="stylesheet" href="styles.css">
+		<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -13,23 +14,119 @@
 	</head>
 	<body>
 
-		<div class="main">
-			<div class="container">
+		<div class="container">
 
-				<div class="eval">Marchand évalué
+			<div class="row merch_eval no-gutter_top">
+
+				<div class="col-8">Marchand évalué :
 
 					<div class="link_to_shop">
-						<a href="http://www.fnac.com">http://www.fnac.com</a>
+						<a href="http://www.fnac.com">www.fnac.com</a>
 					</div>
-					<div class="rate">
-						Rate
+
+				</div>
+				<div class="col-2">
+
+					<img class="img-fluid" style="max-width: 50%;" src="./ressources/star-button.png" alt="">
+
+				</div>
+				<div class="col-2" style="color : #00E9A6; margin-left: -5vw;">
+					<p><span style="font-size: 150%">4.2</span>/5</p>
+				</div>
+			</div>
+
+			<div class="row supported_assoc no-gutter_top">
+
+					<div class="col-8">Association soutenue :
+
+						<div class="link_to_assoc">
+							<a href="http://www.surfrider.org">Surfrider</a>
+						</div>
+
+					</div>
+					<div class="col-2">
+
+						<img class="img-fluid" style="max-width: 50%; font-weight: bold" src="./ressources/heart.png" alt="">
+					</div>
+					<div class="col-2" style="color : #00E9A6; margin-left: -5vw;">
+						<p style="font-weight: bold">361</p>
 					</div>
 
 				</div>
 
-				<div class="assoc">association soutenue</div>
-				<div class="main"></div>
-			</div>
+				<div class="container revioo">
+
+					<div class="row no-gutter_login">
+						<div class="col-1 block">
+							<div class="circle">
+								<p>E</p>
+							</div>
+						</div>
+						<div class="col-1">
+						</div>
+
+						<div class="col-4">
+							<p style="margin-top: 1vw; font-weight: bold"><span style="color: #4982D6">Emilie M.</span></p>
+						</div>
+						<div class="col-2">
+							<img src="ressources/circle-with-check-symbol.png" style="max-width: 40%;" alt="">
+						</div>
+					</div>
+						<div class="row stars no-gutter">
+							<div class="col-1">
+								<img class="img-fluid" style="max-width: 125%" src="./ressources/star.png" alt="">
+							</div>
+							<div class="col-1 star">
+								<img class="img-fluid" style="max-width: 125%" src="./ressources/star.png" alt="">
+							</div>
+							<div class="col-1 star">
+								<img class="img-fluid" style="max-width: 125%" src="./ressources/star.png" alt="">
+							</div>
+							<div class="col-1 star">
+								<img class="img-fluid" style="max-width: 125%" src="./ressources/star.png" alt="">
+							</div>
+							<div class="col-1 star">
+								<img class="img-fluid" style="max-width: 125%" src="./ressources/star_grey.png" alt="">
+							</div>
+							<div class="col-1">
+
+							</div>
+							<div class="col-2">
+								<p><span style="font-size: 150%; font-weight: bold;">4</span>/5</p>
+							</div>
+						</div>
+					<div class="row">
+						<div class="comment_title">
+							<p><b>Un achat parfait</b></p>
+						</div>
+						<div class="comment">
+							<p>C’est ma deuxième commande chez ce marchand et je
+							suis ravie, des prix, de la qualité marchand et je
+							suis ravie, des prix, de la qualité marchand et je
+							 suis ravie, des prix, de la… <span style="color: #4982D6">Afficher la suite</span></p>
+						</div>
+						<div class="buy_date">
+							<span style="color: #9B9B9B">Achat realise le 12 mars 2018</span>
+						</div>
+
+					</div>
+					<div class="row buttonz">
+						<div class="col-5">
+								<div class="like_button" name="button">
+									J'aime
+									<div class="col-1 block">
+										<div class="circle_likes">
+											<p>12</p>
+										</div>
+									</div>
+
+								</div>
+						</div>
+						<div class="col-5">
+								<button type="button" class="report_button" name="button">signaler</button>
+						</div>
+					</div>
+				</div>
 		</div>
 
 	</body>
