this is a button

--- a/tech_test.html
+++ b/tech_test.html
@@ -111,20 +111,25 @@
 
 					</div>
 					<div class="row buttonz">
-						<div class="col-5">
-								<div class="like_button" name="button">
-									J'aime
-									<div class="col-1 block">
-										<div class="circle_likes">
-											<p>12</p>
-										</div>
-									</div>
+						<div class="button_cbeauvoi">
+							<p>J'aime</p>
+							<div> 12 </div>
+						</div>
 
+						<!-- <div class="col-5">
+							<div class="like_button" name="button">
+								J'aime
+								<div class="col-1 block">
+									<div class="circle_likes">
+										<p>12</p>
+									</div>
 								</div>
+
+							</div>
 						</div>
 						<div class="col-5">
 								<button type="button" class="report_button" name="button">signaler</button>
-						</div>
+						</div> -->
 					</div>
 				</div>
 		</div>
