--- a/tech_test.html
+++ b/tech_test.html
@@ -45,12 +45,14 @@
 
 					</div>
 					<div class="col-2">
-
 						<img class="img-fluid" style="max-width: 50%; font-weight: bold" src="./ressources/heart.png" alt="">
 					</div>
 					<div class="col-2" style="color : #00E9A6; margin-left: -5vw;">
 						<p style="font-weight: bold">361</p>
 					</div>
+				</div>
+
+				<div class="col-12 line">
 
 				</div>
 
@@ -70,6 +72,9 @@
 						</div>
 						<div class="col-2">
 							<img src="ressources/circle-with-check-symbol.png" style="max-width: 40%;" alt="">
+						</div>
+						<div class="row" style="display: block">
+								<p>18 mars 2017</p>
 						</div>
 					</div>
 						<div class="row stars no-gutter">
@@ -102,7 +107,7 @@
 						<div class="comment">
 							<p>C’est ma deuxième commande chez ce marchand et je
 							suis ravie, des prix, de la qualité marchand et je
-							suis ravie, des prix, de la qualité marchand et je
+							suis ravie, <br> des prix, de la qualité marchand et je
 							 suis ravie, des prix, de la… <span style="color: #4982D6">Afficher la suite</span></p>
 						</div>
 						<div class="buy_date">
@@ -110,10 +115,16 @@
 						</div>
 
 					</div>
-					<div class="row buttonz">
-						<div class="button_cbeauvoi">
+					<div class="row buttonz no-gutter">
+						<div class="col-4 like_button" style="padding:3px 3px 3px 3px;">
 							<p>J'aime</p>
-							<div> 12 </div>
+							<div class="col-"> 12 </div>
+						</div>
+						<div class="col-1">
+
+						</div>
+						<div class="col-4 report_button" style="padding:3px 3px 3px 3px;">
+							<p>Signaler</p>
 						</div>
 
 						<!-- <div class="col-5">
