--- a/tech_test.html
+++ b/tech_test.html
@@ -61,21 +61,29 @@
 					<div class="row no-gutter_login">
 						<div class="col-1 block">
 							<div class="circle">
-								<p>E</p>
+								<span>E</span>
 							</div>
 						</div>
 						<div class="col-1">
 						</div>
 
-						<div class="col-4">
-							<p style="margin-top: 1vw; font-weight: bold"><span style="color: #4982D6">Emilie M.</span></p>
+						<div class="col-6">
+							<p style="margin-top: 1vw; font-weight: bold">
+								<span style="color: #4982D6">Emilie M.</span>
+								<img src="ressources/circle-with-check-symbol.png" style="max-width: 13%; margin-top: -2.5vw; margin-left:1.6vw;" alt="">
+							</p>
+							<div class="row">
+								<span style="margin-left: 4.4vw; margin-top: -7vw; color: #9B9B9B;">18 mars 2017</span>
+							</div>
+							<!-- <br>
+							<span>18 mars 2017</span> -->
 						</div>
-						<div class="col-2">
+						<!-- <div class="col-2">
 							<img src="ressources/circle-with-check-symbol.png" style="max-width: 40%;" alt="">
-						</div>
-						<div class="row" style="display: block">
-								<p>18 mars 2017</p>
-						</div>
+						</div> -->
+						<!-- <div class="row">
+							<span>blabla</span>
+						</div> -->
 					</div>
 						<div class="row stars no-gutter">
 							<div class="col-1">
