--- a/index.html
+++ b/index.html
@@ -14,28 +14,55 @@
 	</head>
 	<body>
 
-		<div class="container">
+		<div class="container guttered">
 
 			<div class="row merch_eval no-gutter_top">
 
-				<div class="col-8">Marchand évalué :
+				<div class="col-8">
+					<span>Marchand évalué :</span>
 
 					<div class="link_to_shop">
 						<a href="http://www.fnac.com">www.fnac.com</a>
 					</div>
+					<div class="link_img">
+						<a href="http://www.fnac.com"> <img class="img-fluid" src="./ressources/fnac.gif" alt=""> </a>
+					</div>
 
 				</div>
-				<div class="col-2">
 
-					<img class="img-fluid" style="max-width: 50%;" src="./ressources/star-button.png" alt="">
+
+				<div class="mobile_star_rate">
+					<div class="col-2">
+
+						<img class="img-fluid" style="max-width: 50%;" src="./ressources/star-button.png" alt="">
+
+					</div>
+					<div class="col-2" style="color : #00E9A6; margin-left: -5vw;">
+						<p><span>4.2</span>/5</p>
+					</div>
+				</div>
+
+				<div class="col-2 star_rate">
+
+					<img class="img-fluid star_circle" src="./ressources/star-button.png" alt="">
 
 				</div>
 				<div class="col-2" style="color : #00E9A6; margin-left: -5vw;">
 					<p><span style="font-size: 150%">4.2</span>/5</p>
 				</div>
+
+				<!-- </div> -->
+				<!-- <div class="col-2 star_rate">
+
+				<img class="img-fluid" style="max-width: 50%;" src="./ressources/star-button.png" alt="">
+
+				</div>
+				<div class="col-2" style="color : #00E9A6; margin-left: -5vw;">
+					<p><span style="font-size: 150%">4.2</span>/5</p>
+				</div> -->
 			</div>
 
-			<div class="row supported_assoc no-gutter_top">
+			<div class="row supported_assoc no-gutter_top" id="test">
 
 					<div class="col-8">Association soutenue :
 
@@ -50,7 +77,7 @@
 					<div class="col-2" style="color : #00E9A6; margin-left: -5vw;">
 						<p style="font-weight: bold">361</p>
 					</div>
-				</div>
+			</div>
 
 				<div class="col-12 line">
 
@@ -69,11 +96,11 @@
 
 						<div class="col-6">
 							<p style="margin-top: 1vw; font-weight: bold">
-								<span style="color: #4982D6">Emilie M.</span>
+								<span style="color: #4982D6; margin-left: 1.3vw;">Emilie M.</span>
 								<img src="ressources/circle-with-check-symbol.png" style="max-width: 13%; margin-top: -2.5vw; margin-left:1.6vw;" alt="">
 							</p>
 							<div class="row">
-								<span style="margin-left: 4.4vw; margin-top: -7vw; color: #9B9B9B;">18 mars 2017</span>
+								<span style="margin-left: 4.6vw; margin-top: -5vw; color: #9B9B9B;">18 mars 2017</span>
 							</div>
 						</div>
 					</div>
@@ -105,25 +132,25 @@
 							<p><b>Un achat parfait</b></p>
 						</div>
 						<div class="comment">
-							<p>C’est ma deuxième commande chez ce marchand et je
+							<p><span style="font-size: 15px;">C’est ma deuxième commande chez ce marchand et je
 							suis ravie, des prix, de la qualité marchand et je
-							suis ravie, <br> des prix, de la qualité marchand et je
+							suis ravie, des prix, de la qualité marchand et je
 							 suis ravie, des prix, de la… <span style="color: #4982D6">Afficher la suite</span></p>
 						</div>
 						<div class="buy_date">
-							<span style="color: #9B9B9B">Achat realise le 12 mars 2018</span>
+							<span style="color: #9B9B9B;">Achat realise le 12 mars 2018</span>
 						</div>
 
 					</div>
 					<div class="row buttonz no-gutter">
-						<div class="col-4 like_button" style="padding:3px 3px 3px 3px;">
+						<div class="col-5 like_button" style="padding:3px 3px 3px 3px;">
 							<p>J'aime</p>
 							<div class="col-"> 12 </div>
 						</div>
 						<div class="col-1">
 
 						</div>
-						<div class="col-4 report_button" style="padding:3px 3px 3px 3px;">
+						<div class="col-5 report_button" style="padding:3px 3px 3px 3px;">
 							<p>Signaler</p>
 						</div>
 					</div>
