--- a/index.html
+++ b/index.html
@@ -3,159 +3,161 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>fairvioo review</title>
+		<title>index.html></title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 		<link rel="stylesheet" href="styles.css">
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-
 	</head>
 	<body>
 
-		<div class="container guttered">
+		<div class="container">
 
-			<div class="row merch_eval no-gutter_top">
+			<div class="row">
 
-				<div class="col-8">
-					<span>Marchand évalué :</span>
+				<div class="col-md-3 eval-container">
 
-					<div class="link_to_shop">
-						<a href="http://www.fnac.com">www.fnac.com</a>
+					<div class="row merch_eval no-gutter_top">
+
+						<div class="col">
+							<span style="font-weight: bold;">Marchand évalué</span>
+
+							<div class="link_to_shop">
+								<a href="http://www.fnac.com">www.fnac.com</a>
+							</div>
+							<div class="link_img">
+								<a href="http://www.fnac.com"> <img class="img-fluid" style="max-width: 133px;" src="./ressources/fnac.gif" alt=""> </a>
+							</div>
+
+						</div>
+
+						<div class="display: block;">
+							<img class="img-fluid" style="max-width: 10%; margin-left: 0px; margin-top: -10px;" src="./ressources/star-button.png" alt="">
+							<div style="color : #00E9A6; margin-left: 4vw;">
+								<p class="rate_cont" style="margin-left: -10px; font-size: 15px;"><span style="font-size: 150%; font-weight: bold;">4.2</span>/5 <span class="to_hide">(102 avis)</span></p>
+							</div>
+
+						</div>
+
 					</div>
-					<div class="link_img">
-						<a href="http://www.fnac.com"> <img class="img-fluid" src="./ressources/fnac.gif" alt=""> </a>
+
+				</div>
+
+				<div class="col-md-6 com-container">
+
+					<div class="container revioo">
+
+						<div class="row">
+							<div class="col-md block no-gutter_circle">
+								<div class="circle">
+									<span>E</span>
+								</div>
+								<p class="name_display" >
+									<span class="name_display">Emilie M.</span>
+									<img class="circle_check" src="ressources/circle-with-check-symbol.png" alt="">
+									<p class="buy_date_user">18 mars 2017, 10h35</p>
+								</p>
+								<!-- <p class="buy_date">18 mars 2017, 10h35</p> -->
+							</div>
+
+								<div class="col-md stars no-gutter">
+									<div class="col-1">
+										<img class="img-fluid" style="max-width: 150%" src="./ressources/star.png" alt="">
+									</div>
+									<div class="col-1 star">
+										<img class="img-fluid" style="max-width: 150%" src="./ressources/star.png" alt="">
+									</div>
+									<div class="col-1 star">
+										<img class="img-fluid" style="max-width: 150%" src="./ressources/star.png" alt="">
+									</div>
+									<div class="col-1 star">
+										<img class="img-fluid" style="max-width: 150%" src="./ressources/star.png" alt="">
+									</div>
+									<div class="col-1 star">
+										<img class="img-fluid" style="max-width: 150%" src="./ressources/star_grey.png" alt="">
+									</div>
+									<div class="col-1">
+
+									</div>
+
+							</div>
+							<div class="col-1 note">
+								<span style="margin-bottom: 0;"><span style="font-size: 150%; font-weight: bold;">4</span>/5</span>
+							</div>
+						</div>
+						<div class="row">
+							<div class="comment_title">
+								<p><b>Un achat parfait</b></p>
+							</div>
+							<div class="comment">
+
+								<p><span style="font-size: 15px;">C’est ma deuxième
+									commande chez ce marchand et je suis ravie, des
+									 prix, de la qualité des produits, de l’emballage
+									  et des délais de livraison. C’est ma deuxième
+									  commande chez ce…  <span style="color: #4982D6">Afficher la suite</span></p>
+							</div>
+
+						</div>
+						<div class="row buttonz no-gutter">
+							<div class="col-md-12">
+								<div class="like_button" style="padding:3px 35px 3px 3px;">
+									<p>J'aime</p>
+								</div>
+								<div class="report_button" style="padding:3px 3px 3px 3px;">
+									<p>Signaler</p>
+								</div>
+								<div class="buy_date">
+									<span style="color: #9B9B9B; font-size: 12px; margin-left: 40px;">Achat realise le 12 mars 2018</span>
+								</div>
+
+							</div>
+							<!-- <div class="buy_date">
+								<span style="color: #9B9B9B; font-size: 12px; margin-left: 40px;">Achat realise le 12 mars 2018</span>
+							</div> -->
+
+						</div>
+					</div>
+
+
+				</div>
+
+				<div class="col-md-3 eval-container">
+
+					<div class="row merch_eval no-gutter_top">
+
+						<div class="col">
+							<span style="font-weight: bold;">Association soutenue</span>
+
+							<div class="link_to_shop">
+								<a href="http://www.fnac.com">www.fnac.com</a>
+							</div>
+							<div class="link_img_tlmc">
+								<a href="http://toutlemondecontrelecancer.com/"> <img class="img-fluid" style="max-width: 300%;" src="./ressources/tlmc.png" alt=""> </a>
+							</div>
+
+						</div>
+
+						<div class="display: block;">
+							<img class="img-fluid" style="max-width: 10%; margin-left: 0px; margin-top: -10px;" src="./ressources/heart.png" alt="">
+							<div style="color : #00E9A6; margin-left: 4vw;">
+								<p class="rate_cont" style="margin-left: -10px; font-size: 15px;"><span style="font-size: 150%; font-weight: bold;">361</span><span class="to_hide">soutiens</span></p>
+							</div>
+
+						</div>
+
 					</div>
 
 				</div>
 
-
-				<div class="mobile_star_rate">
-					<div class="col-2">
-
-						<img class="img-fluid" style="max-width: 50%;" src="./ressources/star-button.png" alt="">
-
-					</div>
-					<div class="col-2" style="color : #00E9A6; margin-left: -5vw;">
-						<p><span>4.2</span>/5</p>
-					</div>
-				</div>
-
-				<div class="col-2 star_rate">
-
-					<img class="img-fluid star_circle" src="./ressources/star-button.png" alt="">
-
-				</div>
-				<div class="col-2" style="color : #00E9A6; margin-left: -5vw;">
-					<p><span style="font-size: 150%">4.2</span>/5</p>
-				</div>
-
-				<!-- </div> -->
-				<!-- <div class="col-2 star_rate">
-
-				<img class="img-fluid" style="max-width: 50%;" src="./ressources/star-button.png" alt="">
-
-				</div>
-				<div class="col-2" style="color : #00E9A6; margin-left: -5vw;">
-					<p><span style="font-size: 150%">4.2</span>/5</p>
-				</div> -->
 			</div>
 
-			<div class="row supported_assoc no-gutter_top" id="test">
-
-					<div class="col-8">Association soutenue :
-
-						<div class="link_to_assoc">
-							<a href="http://www.surfrider.org">Surfrider</a>
-						</div>
-
-					</div>
-					<div class="col-2">
-						<img class="img-fluid" style="max-width: 50%; font-weight: bold" src="./ressources/heart.png" alt="">
-					</div>
-					<div class="col-2" style="color : #00E9A6; margin-left: -5vw;">
-						<p style="font-weight: bold">361</p>
-					</div>
-			</div>
-
-				<div class="col-12 line">
-
-				</div>
-
-				<div class="container revioo">
-
-					<div class="row no-gutter_login">
-						<div class="col-1 block">
-							<div class="circle">
-								<span>E</span>
-							</div>
-						</div>
-						<div class="col-1">
-						</div>
-
-						<div class="col-6">
-							<p style="margin-top: 1vw; font-weight: bold">
-								<span style="color: #4982D6; margin-left: 1.3vw;">Emilie M.</span>
-								<img src="ressources/circle-with-check-symbol.png" style="max-width: 13%; margin-top: -2.5vw; margin-left:1.6vw;" alt="">
-							</p>
-							<div class="row">
-								<span style="margin-left: 4.6vw; margin-top: -5vw; color: #9B9B9B;">18 mars 2017</span>
-							</div>
-						</div>
-					</div>
-						<div class="row stars no-gutter">
-							<div class="col-1">
-								<img class="img-fluid" style="max-width: 125%" src="./ressources/star.png" alt="">
-							</div>
-							<div class="col-1 star">
-								<img class="img-fluid" style="max-width: 125%" src="./ressources/star.png" alt="">
-							</div>
-							<div class="col-1 star">
-								<img class="img-fluid" style="max-width: 125%" src="./ressources/star.png" alt="">
-							</div>
-							<div class="col-1 star">
-								<img class="img-fluid" style="max-width: 125%" src="./ressources/star.png" alt="">
-							</div>
-							<div class="col-1 star">
-								<img class="img-fluid" style="max-width: 125%" src="./ressources/star_grey.png" alt="">
-							</div>
-							<div class="col-1">
-
-							</div>
-							<div class="col-2">
-								<p><span style="font-size: 150%; font-weight: bold;">4</span>/5</p>
-							</div>
-						</div>
-					<div class="row">
-						<div class="comment_title">
-							<p><b>Un achat parfait</b></p>
-						</div>
-						<div class="comment">
-							<p><span style="font-size: 15px;">C’est ma deuxième commande chez ce marchand et je
-							suis ravie, des prix, de la qualité marchand et je
-							suis ravie, des prix, de la qualité marchand et je
-							 suis ravie, des prix, de la… <span style="color: #4982D6">Afficher la suite</span></p>
-						</div>
-						<div class="buy_date">
-							<span style="color: #9B9B9B;">Achat realise le 12 mars 2018</span>
-						</div>
-
-					</div>
-					<div class="row buttonz no-gutter">
-						<div class="col-5 like_button" style="padding:3px 3px 3px 3px;">
-							<p>J'aime</p>
-							<div class="col-"> 12 </div>
-						</div>
-						<div class="col-1">
-
-						</div>
-						<div class="col-5 report_button" style="padding:3px 3px 3px 3px;">
-							<p>Signaler</p>
-						</div>
-					</div>
-				</div>
 		</div>
 
+
+
+		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 	</body>
 </html>
