--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
 								<p class="name_display" >
 									<span class="name_display">Emilie M.</span>
 									<img class="circle_check" src="ressources/circle-with-check-symbol.png" alt="">
-									<p class="buy_date_user">18 mars 2017, 10h35</p>
+									<p class="buy_date_user">18 mars 2017<span class="to_hide">, 10h35</span></p>
 								</p>
-								<!-- <p class="buy_date">18 mars 2017, 10h35</p> -->
 							</div>
 
 								<div class="col-md stars no-gutter">
@@ -100,7 +99,7 @@
 
 						</div>
 						<div class="row buttonz no-gutter">
-							<div class="col-md-12">
+							<div class="col-md-12 abso">
 								<div class="like_button" style="padding:3px 35px 3px 3px;">
 									<p>J'aime</p>
 								</div>
@@ -108,7 +107,7 @@
 									<p>Signaler</p>
 								</div>
 								<div class="buy_date">
-									<span style="color: #9B9B9B; font-size: 12px; margin-left: 40px;">Achat realise le 12 mars 2018</span>
+									<span class="sorry">Achat realise le 12 mars 2018</span>
 								</div>
 
 							</div>
@@ -138,7 +137,7 @@
 
 						</div>
 
-						<div class="display: block;">
+						<div class="supports">
 							<img class="img-fluid" style="max-width: 10%; margin-left: 0px; margin-top: -10px;" src="./ressources/heart.png" alt="">
 							<div style="color : #00E9A6; margin-left: 4vw;">
 								<p class="rate_cont" style="margin-left: -10px; font-size: 15px;"><span style="font-size: 150%; font-weight: bold;">361</span><span class="to_hide">soutiens</span></p>
