--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 					<div class="row merch_eval no-gutter_top">
 
-						<div class="col">
-							<span style="font-weight: bold;">Marchand évalué</span>
+						<div class="col mob_marg">
+							<span class="eval_text">Marchand évalué <span class="to_hide_desk">:</span></span>
 
 							<div class="link_to_shop">
 								<a href="http://www.fnac.com">www.fnac.com</a>
@@ -32,7 +32,7 @@
 						</div>
 
 						<div class="display: block;">
-							<img class="img-fluid" style="max-width: 10%; margin-left: 0px; margin-top: -10px;" src="./ressources/star-button.png" alt="">
+							<img class="img-fluid star_rate" src="./ressources/star-button.png" alt="">
 							<div style="color : #00E9A6; margin-left: 4vw;">
 								<p class="rate_cont" style="margin-left: -10px; font-size: 15px;"><span style="font-size: 150%; font-weight: bold;">4.2</span>/5 <span class="to_hide">(102 avis)</span></p>
 							</div>
@@ -125,11 +125,11 @@
 
 					<div class="row merch_eval no-gutter_top">
 
-						<div class="col">
-							<span style="font-weight: bold;">Association soutenue</span>
+						<div class="co mob_marg_more">
+							<span class="assoc_text">Association soutenue</span>
 
-							<div class="link_to_shop">
-								<a href="http://www.fnac.com">www.fnac.com</a>
+							<div class="link_to_shop" style="margin-left: -85px;">
+								<a href="http://www.surfrider.org">Surfrider</a>
 							</div>
 							<div class="link_img_tlmc">
 								<a href="http://toutlemondecontrelecancer.com/"> <img class="img-fluid" style="max-width: 300%;" src="./ressources/tlmc.png" alt=""> </a>
@@ -138,9 +138,9 @@
 						</div>
 
 						<div class="supports">
-							<img class="img-fluid" style="max-width: 10%; margin-left: 0px; margin-top: -10px;" src="./ressources/heart.png" alt="">
+							<img class="img-fluid heart_circle" src="./ressources/heart.png" alt="">
 							<div style="color : #00E9A6; margin-left: 4vw;">
-								<p class="rate_cont" style="margin-left: -10px; font-size: 15px;"><span style="font-size: 150%; font-weight: bold;">361</span><span class="to_hide">soutiens</span></p>
+								<p class="rate_cont" style="margin-left: -10px; font-size: 15px;"><span style="font-size: 125%; font-weight: bold;">361</span><span class="to_hide"> soutiens</span></p>
 							</div>
 
 						</div>
