--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
 
 					</div>
 
+					<div class="check">
+
+					</div>
+
+				</div>
+
+				<div class="col-11 line">
+
 				</div>
 
 				<div class="col-md-6 com-container">
@@ -48,15 +56,19 @@
 					<div class="container revioo">
 
 						<div class="row">
+
 							<div class="col-md block no-gutter_circle">
+
 								<div class="circle">
 									<span>E</span>
 								</div>
+
 								<p class="name_display" >
 									<span class="name_display">Emilie M.</span>
 									<img class="circle_check" src="ressources/circle-with-check-symbol.png" alt="">
 									<p class="buy_date_user">18 mars 2017<span class="to_hide">, 10h35</span></p>
 								</p>
+
 							</div>
 
 								<div class="col-md stars no-gutter">
@@ -80,42 +92,49 @@
 									</div>
 
 							</div>
+
 							<div class="col-1 note">
 								<span style="margin-bottom: 0;"><span style="font-size: 150%; font-weight: bold;">4</span>/5</span>
 							</div>
+
 						</div>
 						<div class="row">
+
 							<div class="comment_title">
 								<p><b>Un achat parfait</b></p>
 							</div>
+
 							<div class="comment">
 
-								<p><span style="font-size: 15px;">C’est ma deuxième
+								<p><span style="font-size: 17px;">C’est ma deuxième
 									commande chez ce marchand et je suis ravie, des
 									 prix, de la qualité des produits, de l’emballage
 									  et des délais de livraison. C’est ma deuxième
 									  commande chez ce…  <span style="color: #4982D6">Afficher la suite</span></p>
+
 							</div>
 
 						</div>
 						<div class="row buttonz no-gutter">
+
 							<div class="col-md-12 abso">
+
 								<div class="like_button" style="padding:3px 35px 3px 3px;">
 									<p>J'aime</p>
 								</div>
+
 								<div class="report_button" style="padding:3px 3px 3px 3px;">
 									<p>Signaler</p>
 								</div>
+
 								<div class="buy_date">
 									<span class="sorry">Achat realise le 12 mars 2018</span>
 								</div>
 
 							</div>
-							<!-- <div class="buy_date">
-								<span style="color: #9B9B9B; font-size: 12px; margin-left: 40px;">Achat realise le 12 mars 2018</span>
-							</div> -->
 
 						</div>
+
 					</div>
 
 
@@ -123,12 +142,16 @@
 
 				<div class="col-md-3 eval-container">
 
+					<div class="check check_two">
+
+					</div>
+
 					<div class="row merch_eval no-gutter_top">
 
 						<div class="co mob_marg_more">
-							<span class="assoc_text">Association soutenue</span>
+							<span class="assoc_text">Association soutenue<span class="to_hide_desk"> :</span></span>
 
-							<div class="link_to_shop" style="margin-left: -85px;">
+							<div class="link_to_shop" style="margin-left: -91px;">
 								<a href="http://www.surfrider.org">Surfrider</a>
 							</div>
 							<div class="link_img_tlmc">
