--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 						</div>
 
-						<div class="display: block;">
+						<div class="marger">
 							<img class="img-fluid star_rate" src="./ressources/star-button.png" alt="">
-							<div style="color : #00E9A6; margin-left: 4vw;">
+							<div class="star_text" style="color : #00E9A6; margin-left: 10px;">
 								<p class="rate_cont" style="margin-left: -10px; font-size: 15px;"><span style="font-size: 150%; font-weight: bold;">4.2</span>/5 <span class="to_hide">(102 avis)</span></p>
 							</div>
 
@@ -55,7 +55,7 @@
 
 					<div class="container revioo">
 
-						<div class="row">
+						<div class="row" style="margin-top: 31px;">
 
 							<div class="col-md block no-gutter_circle">
 
@@ -98,7 +98,7 @@
 							</div>
 
 						</div>
-						<div class="row">
+						<div class="row" style="margin-top: -12px;">
 
 							<div class="comment_title">
 								<p><b>Un achat parfait</b></p>
@@ -106,7 +106,7 @@
 
 							<div class="comment">
 
-								<p><span style="font-size: 17px;">C’est ma deuxième
+								<p><span style="font-size: 14px;">C’est ma deuxième
 									commande chez ce marchand et je suis ravie, des
 									 prix, de la qualité des produits, de l’emballage
 									  et des délais de livraison. C’est ma deuxième
@@ -120,7 +120,7 @@
 							<div class="col-md-12 abso">
 
 								<div class="like_button" style="padding:3px 35px 3px 3px;">
-									<p>J'aime</p>
+									<p>J'aime <div class="">12</div> </p>
 								</div>
 
 								<div class="report_button" style="padding:3px 3px 3px 3px;">
@@ -162,7 +162,7 @@
 
 						<div class="supports">
 							<img class="img-fluid heart_circle" src="./ressources/heart.png" alt="">
-							<div style="color : #00E9A6; margin-left: 4vw;">
+							<div style="color : #00E9A6; margin-left: 10px;">
 								<p class="rate_cont" style="margin-left: -10px; font-size: 15px;"><span style="font-size: 125%; font-weight: bold;">361</span><span class="to_hide"> soutiens</span></p>
 							</div>
 
