--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<div class="row" style="margin-top: -12px;">
 
 							<div class="comment_title">
-								<p><b>Un achat parfait</b></p>
+								<p style="margin-top: 25px;"><b>Un achat parfait</b></p>
 							</div>
 
 							<div class="comment">
@@ -155,7 +155,7 @@
 								<a href="http://www.surfrider.org">Surfrider</a>
 							</div>
 							<div class="link_img_tlmc">
-								<a href="http://toutlemondecontrelecancer.com/"> <img class="img-fluid" style="max-width: 300%;" src="./ressources/tlmc.png" alt=""> </a>
+								<a href="http://toutlemondecontrelecancer.com/"> <img class="img-fluid" style="max-width: 230%;" src="./ressources/tlmc.png" alt=""> </a>
 							</div>
 
 						</div>
